[metadata]
name = climplots
author = Manuel Hraschan
author_email =
license =
description = A sample Python project to plot temperature anomalies from CSV and netCDF files
long_description_content_type=
long_description =
url =
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = .
setup_requires =
    setuptools_scm
python_requires = >=3.7
install_requires =
    numpy >= 1.18
    matplotlib
    pandas
    xarray
    netcdf4

[options.package_data]
* =
    

[options.entry_points]
console_scripts =
  climplots = climplots.commands:climplots

